--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,13 +2,16 @@
 # for more information about tags
 image: sergiogasquez/esp-rs-env:esp32
 tasks:
-  - name: Adopt environment in the container image to gitpod user
-    command: |
-      ln -s /home/esp/.rustup /home/gitpod/.rustup
-      mkdir /home/gitpod/.cargo
-      ln -s /home/esp/.cargo/bin /home/gitpod/.cargo/bin
-      ln -s /home/esp/.cargo/env /home/gitpod/.cargo/env
-      source /home/gitpod/.cargo/env
+  - name: Rename
+    before: |
+      usermod -l gitpod esp
+#   - name: Adopt environment in the container image to gitpod user
+#     command: |
+#       ln -s /home/esp/.rustup /home/gitpod/.rustup
+#       mkdir /home/gitpod/.cargo
+#       ln -s /home/esp/.cargo/bin /home/gitpod/.cargo/bin
+#       ln -s /home/esp/.cargo/env /home/gitpod/.cargo/env
+#       source /home/gitpod/.cargo/env
 vscode:
   extensions:
     - matklad.rust-analyzer
@@ -18,4 +21,3 @@ vscode:
     - yzhang.markdown-all-in-one
 ports:
   - port: 9012
-    visibility: public
