--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,14 +4,14 @@ image: sergiogasquez/esp-rs-env:esp32
 tasks:
   - name: Rename
     before: |
-      usermod -m -d /home/esp gitpod
-#   - name: Adopt environment in the container image to gitpod user
-#     command: |
-#       ln -s /home/esp/.rustup /home/gitpod/.rustup
-#       mkdir /home/gitpod/.cargo
-#       ln -s /home/esp/.cargo/bin /home/gitpod/.cargo/bin
-#       ln -s /home/esp/.cargo/env /home/gitpod/.cargo/env
-#       source /home/gitpod/.cargo/env
+  - name: Adopt environment in the container image to gitpod user
+    command: |
+      ln -s /home/esp/.rustup /home/gitpod/.rustup
+      mkdir /home/gitpod/.cargo
+      ln -s /home/esp/.cargo/bin /home/gitpod/.cargo/bin
+      ln -s /home/esp/.cargo/env /home/gitpod/.cargo/env
+      source /home/gitpod/.cargo/env
+      export HOME=/home/esp
 vscode:
   extensions:
     - matklad.rust-analyzer
