--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,15 +3,15 @@
 image: sergiogasquez/esp-rs-env:esp32
 tasks:
   - name: Rename
-    before: |
-  - name: Adopt environment in the container image to gitpod user
-    command: |
-      ln -s /home/esp/.rustup /home/gitpod/.rustup
-      mkdir /home/gitpod/.cargo
-      ln -s /home/esp/.cargo/bin /home/gitpod/.cargo/bin
-      ln -s /home/esp/.cargo/env /home/gitpod/.cargo/env
-      source /home/gitpod/.cargo/env
-      export HOME=/home/esp
+    init: |
+      usermod -l gitpod esp
+#   - name: Adopt environment in the container image to gitpod user
+#     command: |
+#       ln -s /home/esp/.rustup /home/gitpod/.rustup
+#       mkdir /home/gitpod/.cargo
+#       ln -s /home/esp/.cargo/bin /home/gitpod/.cargo/bin
+#       ln -s /home/esp/.cargo/env /home/gitpod/.cargo/env
+#       source /home/gitpod/.cargo/env
 vscode:
   extensions:
     - matklad.rust-analyzer
