--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,16 +2,15 @@
 # for more information about tags
 image: sergiogasquez/esp-rs-env:esp32
 tasks:
-  - name: Rename
-    init: |
-      usermod -l gitpod esp
-#   - name: Adopt environment in the container image to gitpod user
-#     command: |
-#       ln -s /home/esp/.rustup /home/gitpod/.rustup
-#       mkdir /home/gitpod/.cargo
-#       ln -s /home/esp/.cargo/bin /home/gitpod/.cargo/bin
-#       ln -s /home/esp/.cargo/env /home/gitpod/.cargo/env
-#       source /home/gitpod/.cargo/env
+  - name: Adopt environment in the container image to gitpod user
+    command: |
+      ln -s /home/esp/.rustup /home/gitpod/.rustup
+      mkdir /home/gitpod/.cargo
+      ln -s /home/esp/.cargo/bin /home/gitpod/.cargo/bin
+      ln -s /home/esp/.cargo/env /home/gitpod/.cargo/env
+      source /home/gitpod/.cargo/env
+      gp env IDF_PATH=/home/esp/esp-idf
+      eval $(gp env -e)
 vscode:
   extensions:
     - matklad.rust-analyzer
